# Muses-bench-sandbox

./: .gitignore  README.md
backend/: .env.example  database.py  json_db.py  main.py  models.py  pyproject.toml  requirements.txt  vercel.json
backend/data/: users.json
backend/mongo_deploy/: main.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/components/: ProtectedRoute.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx
frontend/src/utils/: api.ts
